Add tests, fix caching on realm updates